<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventPlanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_event">Create Event</string>
    <string name="title_activity_make_event">MakeEventActivity</string>
    <string name="makeEventButtonText">Make Event</string>
    <string name="newEventTitleEditText">New Event Title</string>
    <string name="title_activity_event_details">EventDetails</string>
    <string name="description">Description:</string>
    <string name="needed">People Needed:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="cancel">Cancel</string>
    <string name="event_name">Event Name</string>
    <string name="task">Task</string>
    <string name="deadline">Time Until Deadline</string>
    <string name="days">"Days: "</string>
    <string name="date1">Date</string>
    <string name="time1">Time</string>
    <string name="time2">Time</string>
    <string name="time3">Time</string>
    <string name="title_activity_view_task">ViewTaskActivity</string>
    <string name="title_activity_edit_event">Edit Event</string>
    <string name="title_activity_list_events">Task List</string>
    <string name="task1">Task</string>
    <string name="date2">Date</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="deadline1">Deadline:</string>
    <string name="edit1">Edit</string>
    <string name="delete">Delete</string>
    <string name="title">Title:</string>
    <string name="saveChangesButtonText">Save Changes</string>
    <string name="descriptionEditText"></string>
    <string name="titleEditText"></string>
    <string name="serviceButtontext">Notify Me</string>
    <string name="listTitleText">Title</string>
    <string name="deadlineText">deadline</string>
    <string name="deleteTaskText">Complete</string>
    <string name="listEventButtonText">View Tasks in List</string>

</resources>
